# bssunfold

./: .gitignore  .gitleaksignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  README.md  REFACTORING.md  TESTS_AND_DOCS.md  codemeta.json  detector (2).py  pyproject.toml  pyproject_toml  requirements.txt  test_cosine.py
.github/: dependabot.yml
.github/workflows/: cross-platform-tests.yml  deploy-marimo.yml  deploy-matimo.yml  deploy_jupyterbook.yml  docs.yml  publish-testpypi.yml  publish-to-github-packages.yml  publish-to-github-releases.yml  publish_pypi.yml  python-package.yml
docs/: conf.py  detector.rst  detector_fixed.rst  examples.rst  index.rst  overview.rst  reconst_comparison.rst  requirements.txt
docs/_static/: .gitkeep
example/: 01-basic-example.ipynb  02-marimo-notebook.py
example/__marimo__/session/: 02-marimo-notebook.py.json
examples/: 01-basic-example.ipynb  02-basic-example-for-mybinder.ipynb  03-uncertainty.ipynb  04-convert_spectra.ipynb  05-mlem_example.ipynb  06-features.ipynb  07-QP_solvers.ipynb  08-combined_algorithm.ipynb  09-doroshenko_kaczmarz_algorithm.ipynb  10-lmfit.ipynb  11-QP_solvers_smooth.ipynb  12-TSVD.ipynb  13-Bayes_statreg.ipynb  14-Maxed.ipynb  15-Comparison_metrics.ipynb  16-Parametric.ipynb  17-Doserate_comparison.ipynb  18-Doserate_qpsolvers.ipynb  19-MLEM_stopping_criteria.ipynb  20-RECONST.ipynb
output/jupyter-notebook/: advanced-unfolding-methods.ipynb
papers/: IAEA_compendium_analysis.md  IAEA_compendium_results.csv
plans/: refactoring-plan.md
src/bssunfold/: __init__.py  constants.py  detector.py  logging_config.py  platform_check.py  unfolding_helpers.py
src/bssunfold/constants/: __init__.py  constants.py  responsefunctions.py
src/bssunfold/core/: __init__.py  _base_unfolder.py  _matrix_utils.py  _montecarlo.py  _numba_jit.py  basis.py  detector.py  dose_calculation.py  regularization.py  unfold_bayes.py  unfold_bayes_spline_regularization.py  unfold_bayesian_parametric.py  unfold_combined.py  unfold_cvxpy.py  unfold_doroshenko.py  unfold_fruit_like.py  unfold_gravel.py  unfold_hybrid_parametric.py  unfold_kaczmarz.py  unfold_landweber.py  unfold_lmfit.py  unfold_maxed.py  unfold_mlem.py  unfold_mlem_odl.py  unfold_mlem_stop.py  unfold_parametric.py  unfold_parametric2.py  unfold_qpsolvers.py  unfold_reconst.py  unfold_scipy_direct_method.py  unfold_statreg.py  unfold_tikhonov_legendre.py  unfold_tsvd.py  unfolding_methods.py
src/bssunfold/plots/: __init__.py  plots.py
src/bssunfold/utils/: __init__.py  comparison.py  converters.py  interpolation.py  math_utils.py  plotting.py  validators.py
tests/: IAEA_Compendium_dataset.csv  MonteCarlo_Calculated_spectra_from_IAEA_Comp_for_comparison.csv  analyze_iaea_compendium.py  dose_rate_evaluation.py  dose_rate_iaea_compendium.py  dose_rate_qpsolvers_cvxpy.py  iaea_validation_GSF.csv  iaea_validation_LANL.csv  iaea_validation_PTB.csv  method_ranking.csv  rank_methods.py  summarize_iaea.py  test_all.py  test_basis.py  test_comparison.py  test_coverage.py  test_coverage_boost.py  test_detector.py  test_dose_coefficients.py  test_iaea_validation.py  test_improvements.py  test_methods2.py  test_mlem.py  test_mlem_stop.py  test_new_methods.py  test_new_methods_fixed.py  test_new_metrics.py  test_readings.py  test_reconst.py  test_refactored.py  test_refactored_fixed.py  test_response_functions.py  test_unfold_parametric.py  test_unfold_parametric2.py
