[project]
name = "bssunfold"
version = "0.1.0"
description = "Python package for neutron spectrum unfolding from measurements obtained with Bonner Sphere Spectrometer (BSS)"
readme = "README.md"
authors = [
    { name = "Konstantin Chizhov", email = "kchizhov@jinr.ru" }
]
keywords = [ "unfolding", "BSS" ]

requires-python = ">=3.11"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license ="GPL-3.0-only"
license-files = ["LICENSE"]

dependencies = [
    "cvxpy[cvxopt,ecos]>=1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.0",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
]

[project.scripts]
bssunfold = "bssunfold:main"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "pydata-sphinx-theme>=0.16.1",
    "pytest>=9.0.2",
    "sphinx>=9.0.4",
    "twine>=6.2.0",
    "uv-build>=0.9.18",
    "pip>=24.0",
    "troml>=0.4.1",
    "directory-tree>=1.0.0",
    "marimo>=0.18.4",
    "ruff>=0.14.10",
]

[project.urls]
Homepage = "https://github.com/Radiationsafety/bssunfold"
Issues = "https://github.com/Radiationsafety/bssunfold/issues"
Repository = "https://github.com/Radiationsafety/bssunfold.git"
Changelog = "https://github.com/Radiationsafety/bssunfold/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 80
indent-width = 4