[project]
name = "bssunfold"
version = "0.10.0"
description = "Python package for neutron spectrum unfolding from measurements obtained with Bonner Sphere Spectrometer (BSS)"
readme = "README.md"
authors = [
    { name = "Konstantin Chizhov", email = "kchizhov@jinr.ru" },
    { name = "Alexei Chizhov", email = "chizhov@jinr.ru" },
    { name = "Dmitry Borschev", email = "bds.22@uni-dubna.ru" },
    { name = "Maria Akimochkina", email = "a.m.a.mos@yandex.ru" },
]
maintainers = [
  {name = "Konstantin Chizhov", email = "kchizhov@jinr.ru"}
]
keywords = [ "unfolding", "BSS", "ill-posed task", "inverse problem", "Bonner sphere spectrometer"]

requires-python = ">=3.11"

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license ="GPL-3.0-only"
license-files = ["LICENSE"]

dependencies = [
    "cvxpy[ecos]>=1.7.5",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.2.3",
    "pyzmq>=27.1.0",
    "scipy>=1.16.3",
]

[project.optional-dependencies]
# Optional algorithmic backends (imported lazily inside function bodies with try/except)
lmfit = [
    "lmfit>=1.3.4",
]
mlem = [
    "odl>=1.0.0",
]
tikhonov = [
    "pytikhonov>=0.0.1",
]
qpsolvers = [
    "qpsolvers>=4.10.0",
]

test = [
    "pytest>=9.0.3",
]
# All optional backends
all = [
    "bssunfold[lmfit]",
    "bssunfold[mlem]",
    "bssunfold[tikhonov]",
    "bssunfold[qpsolvers]",
    "bssunfold[test]",
]
# Base set of QP solvers available on all platforms (including Windows)
solvers-core = [
    "qpsolvers[osqp,piqp,qpalm,ecos,scs,clarabel]>=4.10.0",
]
# ProxQP solver via proxsuite — NOT available on Windows
solvers-proxqp = [
    "proxsuite>=0.7.2",
]
# JAX-based solvers
solvers-jax = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "jaxopt>=0.8.0",
]
# All optional solvers (Unix/Linux/macOS only — includes proxsuite)
all-solvers = [
    "bssunfold[solvers-core]",
    "bssunfold[solvers-proxqp]",
    "bssunfold[solvers-jax]",
]
# Recommended for Windows users (all solvers except proxsuite)
windows = [
    "bssunfold[solvers-core]",
    "bssunfold[solvers-jax]",
]

[project.scripts]
bssunfold = "bssunfold:main"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

# [tool.hatch.build]
# include = [
#     "src/bssunfold/**",
#     "README.md",
#     "LICENSE",
# ]

# exclude = [
#     "tests/**",
#     "assets/**",
#     "docs/**",
#     "favicon.ico",
#     "uv.lock",
#     "**/pycache",
#     "**/*.pyc",
#     "**/.git*",
#     "**/*.tmp",
#     "tests/**/*.dat",
#     "*.log",
#     "codemeta.json",
#     "conda.recipe/**",
# ]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "pydata-sphinx-theme>=0.16.1",
    "pytest>=9.0.3",
    "pytest-cov>=6.1.0",
    "sphinx>=9.0.4",
    "twine>=6.2.0",
    "uv-build>=0.9.18",
    "pip>=24.0",
    "troml>=0.4.1",
    "directory-tree>=1.0.0",
    "marimo>=0.19.0",
    "ruff>=0.14.10",
    "pandas-stubs>=2.2.3",
    "plotly>=6.5.0",
    "coverage>=7.13.1",
    "codacy-coverage>=1.3.11",
    "radon>=6.0.1",
    "grayskull>=2.9.2",
    "codemetapy>=3.0.3",
    "deptry>=0.24.0",
    "jupyter-book>=2.1.0",
    "ghp-import>=2.1.0",
    "ipywidgets>=8.1.8",
    "seaborn>=0.13.2",
    "black>=26.3.0",
    "autopep8>=2.3.2",
    "qpsolvers>=4.10.0",
    "lmfit>=1.3.4",
    "odl>=1.0.0",
    "pytikhonov>=0.0.1",
]

[project.urls]
Homepage = "https://github.com/Radiationsafety/bssunfold"
Issues = "https://github.com/Radiationsafety/bssunfold/issues"
Repository = "https://github.com/Radiationsafety/bssunfold.git"
Changelog = "https://github.com/Radiationsafety/bssunfold/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:odl_plugins"

[tool.coverage.run]
source = ["src/bssunfold"]
omit = [
    "*/tests/*",
    "*/__pycache__/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

# [tool.coverage.report]
# fail_under = 80  # минимальный процент coverage

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 80
indent-width = 4

[tool.ruff.lint]
# F401 — unused import (will be fixed in code, but allow for now)
# F541 — f-string without placeholders (will be fixed)
# E741 — ambiguous variable name (will be fixed)
ignore = [
    "F401",
    "F541",
    "E741",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
publish-url = "https://upload.pypi.org/legacy/"


